src/objects/Investments_in_Lab_and_Demo_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created for Report</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investments in Lab and Demo Equipment</relationshipLabel>
        <relationshipName>Investments_in_Lab_and_Demo_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Plan_ID__c</fullName>
        <label>Business Plan ID</label>
        <referenceTo>Business_Plan__c</referenceTo>
        <relationshipLabel>Investments in Lab and Demo Equipment</relationshipLabel>
        <relationshipName>Investments_in_Lab_and_Demo_Equipment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Do_you_already_have_Nokia_equipment__c</fullName>
        <label>Do you already have Nokia equipment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_wish_to_invest_in_Demo_Equipment__c</fullName>
        <label>Do you wish to invest in Demo Equipment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_wish_to_invest_in_a_Lab_Equipment__c</fullName>
        <label>Do you wish to invest in a Lab Equipment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_indicate_Lab_Demo_Equipment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Yes, indicate Lab/Demo Equipment</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <defaultValue>&apos;In this section please enter the technology area where you wish to invest in a lab and/or demo equipment with Nokia.&apos; &amp;  BR()  &amp;  BR()  &amp; &apos;Please create a record for each technology for which you intend to invest in Lab &amp; Demo.&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Introduction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Targeted_Quarter__c</fullName>
        <label>Targeted Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_area__c</fullName>
        <label>Technology area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Portfolio</valueSetName>
        </valueSet>
    </fields>
    <label>Investments in Lab and Demo Equipment</label>
    <nameField>
        <displayFormat>Inv-{0000}</displayFormat>
        <label>Investment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investments in Lab and Demo Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Indicate_Nokia_Lab_Equipment</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Do_you_already_have_Nokia_equipment__c , &apos;Yes&apos;) &amp;&amp;  ISBLANK(If_Yes_indicate_Lab_Demo_Equipment__c )</errorConditionFormula>
        <errorDisplayField>If_Yes_indicate_Lab_Demo_Equipment__c</errorDisplayField>
        <errorMessage>You have indicated Yes. Please enter Lab/Demo Equipment you have.</errorMessage>
    </validationRules>
</CustomObject>